--- a/listusers.html
+++ b/listusers.html
@@ -1,1 +1,82 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SDI to Name</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f0f0f0;
+      display: flex;
+      flex-direction: column;  /* Make the container a column layout */
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      overflow-x: hidden;  /* Hide horizontal scrollbar */
+    }
 
+    .container {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      width: 80%;  /* Limit the width of the container */
+      max-width: 600px;  /* Set a maximum width */
+      margin-top: 20px;  /* Add margin at the top */
+    }
+
+    label {
+      display: block;
+      margin: 10px 0;
+    }
+
+    input {
+      padding: 10px;
+      margin: 10px 0;
+      width: 80%;
+      box-sizing: border-box;
+    }
+
+    button {
+      padding: 10px 15px;
+      cursor: pointer;
+      background-color: #4caf50;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+    }
+
+        .nav-button {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      padding: 10px;
+      background-color: #4caf50;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 4px;
+    }
+
+    #fullNameResult {
+      margin-top: 20px;
+      font-weight: bold;
+      color: #333;
+    }
+
+    .search-buttons {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 10px;
+    }
+  </style>
+</head>
+<body>
+    <h1>Users on DIT Linux machines</h1>
+    <label for="sdiInput">Linux machines that don't show up here are either empty or offline.</label>
+    <iframe src="test.txt" width="700" height="700"></iframe>
+
+</body>
+</html>
