--- a/listusers.html
+++ b/listusers.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SDI to Name</title>
+  <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+    <!-- Link the CSS file -->
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <script type="module" src="assets/js/main.js"></script>
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicons/site.webmanifest">
+    <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="assets/favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="assets/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
+
+    <title>DiTools</title>
   <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f0f0f0;
-      display: flex;
-      flex-direction: column;  /* Make the container a column layout */
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      overflow-x: hidden;  /* Hide horizontal scrollbar */
-    }
+
     .container {
       background-color: #fff;
       padding: 20px;
@@ -57,13 +73,23 @@
       text-decoration: none;
       border-radius: 4px;
     }
+	.iframe-container {
+            display: flex;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        iframe {
+            width: 700px;
+            height: 700px;
+        }
 	
     #fullNameResult {
       margin-top: 20px;
       font-weight: bold;
       color: #333;
     }
-
+	
     .search-buttons {
       display: flex;
       flex-direction: column;
@@ -73,9 +99,33 @@
   </style>
 </head>
 <body>
-    <h1>Users on DIT Linux machines</h1>
-    <label for="sdiInput">Linux machines that don't show up here are either empty or offline.</label>
-    <iframe src="test.txt" width="700" height="700"></iframe>
+<nav class="navbar navbar-expand-lg sticky-top navbar-light" , style="background-color: #6EA4BF;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <h2> <span class="nav_logo">Di</span><b style="color: white;">tools</b></h2>
+            </a>
+            
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" href="sditoname.html">SDI to Name</a>
+                    <a class="nav-link" href="nametosdi.html">Name to SDI </a>
+					<a class="nav-link" href="listusers.html">List Linux Users </a>
+                </div>
+            </div>
+
+ 
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </nav>
+    <h1 style="text-align:center">Users on DIT Linux machines</h1>
+    <h3 style="text-align:center; margin-bottom: 0;">Linux machines that don't show up here are either empty or offline.</h3> <br>
+    <div class="iframe-container">
+        <iframe src="test.txt" width="700" height="700"></iframe>
+    </div>
 
 </body>
 </html>
