--- a/sditoname.html
+++ b/sditoname.html
@@ -132,7 +132,7 @@
 
     <div class="container">
     <h1>SDI to Name</h1>
-    <input type="text" id="sdiInput" placeholder="Enter SDI" onkeydown="handleEnter(event)">
+    <input type="text" id="nameInput" placeholder="Enter SDI" onkeydown="handleEnter(event)">
     <div class="search-buttons">
       <button onclick="getFullName()">Get Full Name</button>
     </div>
