--- a/nametosdi.html
+++ b/nametosdi.html
@@ -132,7 +132,7 @@
 
     <div class="container">
     <h1>Name to SDI</h1>
-    <input type="text" id="sdiInput" placeholder="Enter name" onkeydown="handleEnter(event)">
+    <input type="text" id="nameInput" placeholder="Enter name" onkeydown="handleEnter(event)">
     <div class="search-buttons">
       <button onclick="getSdiByFullName()">Get SDI</button>
     </div>
