--- a/nametosdi.html
+++ b/nametosdi.html
@@ -78,7 +78,7 @@
     border-radius: 4px;
   }
 
-  #fullNameResult {
+  #sdiResult {
     margin-top: 20px;
     font-weight: bold;
     color: #333;
@@ -88,7 +88,7 @@
     text-align: center; /* Center-align text within the page-title div */
   }
 
-  #sdiInput {
+  #nameInput {
     padding: 10px;
     margin: 10px 0;
     width: 50%;
