allages sto css

--- a/index.html
+++ b/index.html
@@ -1,155 +1,5 @@
-
-<!doctype html>
-<html lang="en">
-
-<head>
-    <!-- Required meta tags -->
-	
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-
-    <!-- Link the CSS file -->
-    <link rel="stylesheet" href="assets/css/style.css">
-
-    <script type="module" src="assets/js/main.js"></script>
-
-    <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
-    <link rel="manifest" href="assets/favicons/site.webmanifest">
-    <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="assets/favicons/favicon.ico">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="assets/favicons/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-
-
-    <title>Leaderboard</title>
-	<style>
-  .container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    width: 80%;
-    max-width: 600px;
-    margin-top: 20px;
-  }
-
-  label {
-    display: block;
-    margin: 10px 0;
-  }
-
-  input {
-    padding: 10px;
-    margin: 10px 0;
-    width: 80%;
-    box-sizing: border-box;
-    margin: 0 auto; /* Center the text input */
-  }
-
-  button {
-  padding: 10px 15px;
-  cursor: pointer;
-  background-color: #5bbad5; /* Set the background color to #5bbad5 */
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-}
-
-  .nav-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    padding: 10px;
-    background-color: #4caf50;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 4px;
-  }
-
-  #fullNameResult {
-    margin-top: 20px;
-    font-weight: bold;
-    color: #333;
-  }
-
-  .page-title {
-    text-align: center; /* Center-align text within the page-title div */
-  }
-
-  #sdiInput {
-    padding: 10px;
-    margin: 10px 0;
-    width: 50%;
-    box-sizing: border-box;
-    /* Remove margin: 0 auto; */
-  }
-
-  .search-buttons {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 10px;
-  }
-</style>
-
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg sticky-top navbar-light" , style="background-color: #6EA4BF;">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <h2> <span class="nav_logo">Di</span><b style="color: white;">tools</b></h2>
-            </a>
-            
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" href="sditoname.html">SDI to Name</a>
-                    <a class="nav-link" href="nametosdi.html">Name to SDI </a>
-					<a class="nav-link" href="listusers.html">List Linux Users </a>
-                </div>
-            </div>
-
- 
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
-    </nav>
-    <br> <br> <br> <br> <br>
-    <div class="container">
-    <h1>SDI to Name</h1>
-    <input type="text" id="sdiInput" placeholder="Enter SDI" onkeydown="handleEnter(event)">
-    <div class="search-buttons">
-      <button onclick="getFullName()">Get Full Name</button>
-    </div>
-    <p id="fullNameResult"></p>
-  </div>
-  <script src="script.js"></script>
-
-  <script>
-    function handleEnter(event) {
-      if (event.key === "Enter") {
-        getFullName();
-      }
-    }
-  </script>
-
-    
-
-</body>
-
-</html>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to https://example.com/</title>
+<meta http-equiv="refresh" content="0; URL=sditoname.html">
+<link rel="canonical" href="sditoname.html>
