--- a/listusers.html
+++ b/listusers.html
@@ -51,7 +51,7 @@
 		<h1 style="text-align:center">Users on DIT Linux machines</h1>
 		<h3 class="greyLetters">Linux machines that don't show up here are either empty or offline.</h3>
 		<div>
-			<iframe src="test.txt" frameborder="0" scrolling="no" onload="resizeIframe(this)"></iframe>
+			<iframe src="https://cgi.di.uoa.gr/~sdi2300208/test.txt" frameborder="0" scrolling="no" onload="resizeIframe(this)"></iframe>
 		</div>
 	</div>
 </body>
