--- a/nametosdi.html
+++ b/nametosdi.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg sticky-top navbar-light" , style="background-color: #6EA4BF;">
+	<nav class="navbar navbar-expand-lg sticky-top navbar-light gradient" , style="background-color: #6EA4BF;">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">
 				<h2> <span class="nav_logo">Di</span><b style="color: white;">tools</b></h2>
