--- a/listusers.html
+++ b/listusers.html
@@ -52,7 +52,7 @@
 				<h1 style="text-align:center">Users on DIT Linux machines</h1>
 				<h3 class="greyLetters">Linux machines that don't show up here are either empty or offline.</h3>
 			</div>
-			<button class="child refresh" onClick="window.location.reload();"><span class="material-icons" style="vertical-align:middle;">cached</span></button>
+			<button class="child refresh" onClick="window.location.reload(true);"><span class="material-icons" style="vertical-align:middle;">cached</span></button>
 
 		</div>
 		<div>
