--- a/listusers.html
+++ b/listusers.html
@@ -58,6 +58,9 @@
 		<div>
 			<iframe src="https://cgi.di.uoa.gr/~sdi2300208/test.txt"></iframe>
 		</div>
+		 <div style="text-align: center; margin-top: 20px;">
+                 	<a href="https://cgi.di.uoa.gr/~sdi2300208/history.txt" class="btn btn-primary">LOG HISTORY</a>
+                 </div>
 	</div>
 </body>
 </html>
