--- a/nametosdi.html
+++ b/nametosdi.html
@@ -16,7 +16,7 @@
 
 	<!-- Link the CSS file -->
 	<link rel="stylesheet" href="style.css">
-	<title>Leaderboard</title>
+	<title>DiTools</title>
 </head>
 
 <body>
