--- a/listusers.html
+++ b/listusers.html
@@ -52,15 +52,12 @@
 				<h1 style="text-align:center">Users on DIT Linux machines</h1>
 				<h3 class="greyLetters">Linux machines that don't show up here are either empty or offline.</h3>
 			</div>
-			<button class="child refresh" onClick="window.location.reload(true);"><span class="material-icons" style="vertical-align:middle;">cached</span></button>
+			<button class="child refresh" onClick="window.location.reload();"><span class="material-icons" style="vertical-align:middle;">cached</span></button>
 
 		</div>
 		<div>
 			<iframe src="https://cgi.di.uoa.gr/~sdi2300208/test.txt"></iframe>
 		</div>
-		 <div style="text-align: center; margin-top: 20px;">
-                 	<a href="https://cgi.di.uoa.gr/~sdi2300208/history.txt" class="btn btn-primary">LOG HISTORY</a>
-                 </div>
 	</div>
 </body>
 </html>
