--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<title>Redirecting to https://example.com/</title>
 <meta http-equiv="refresh" content="0; URL=sditoname.html">
 <link rel="canonical" href="sditoname.html>
