--- a/nametosdi.html
+++ b/nametosdi.html
@@ -16,10 +16,7 @@
 
 	<!-- Link the CSS file -->
 	<link rel="stylesheet" href="style.css">
-	<title>Leaderboard</title>
-	<script>var exports = {};</script>
-	<script src="leven.js"></script>
-
+	<title>DiTools</title>
 </head>
 
 <body>
@@ -48,8 +45,6 @@
 	<div class="container">
 		<h1>Name to SDI</h1>
 		<input type="text" id="nameInput" placeholder="Enter name" onkeydown="handleEnter(event)">
-		<div id="autocomplete-results"></div>
-
 		<div class="search-buttons">
 			<button onclick="getSdiByFullName()">Get SDI</button>
 		</div>
